# tauri_task_demo

./: README.md
lab_tasks_srv/: Cargo.toml
lab_tasks_srv/src/: main.rs
lab_tasks_srv/src/store/: mod.rs  sql_mapper.rs  task_handler.rs
lab_tasks_srv/src/tasks/: task_route.rs
lab_tasks_srv/src/utils/: route_handler.rs
lab_tasks_tauri/: .env-example  .gitignore  package-lock.json  package.json  pnpm-lock.yaml
lab_tasks_tauri/src/: App.css  (+1 more)
lab_tasks_tauri/src-tauri/: Cargo.toml  tauri.conf.json
lab_tasks_types/: Cargo.toml
tauri-plugin-dialer/: Cargo.toml  README.md  package.json
tauri-plugin-filepicker/: .gitignore  Cargo.toml  README.md  build.rs  package.json
tauri-plugin-filepicker/android/: build.gradle.kts  kls_database.db  local.properties
tauri-plugin-filepicker/android/src/main/java/: Filepicker.kt  FilepickerPlugin.kt
tauri-plugin-filepicker/examples/tauri-app/: package.json
tauri-plugin-filepicker/examples/tauri-app/src/: App.svelte
tauri-plugin-filepicker/examples/tauri-app/src-tauri/: Cargo.toml
tauri-plugin-filepicker/examples/tauri-app/src-tauri/capabilities/: default.json
tauri-plugin-filepicker/examples/tauri-app/src-tauri/src/: lib.rs
tauri-plugin-filepicker/guest-js/: index.ts
tauri-plugin-filepicker/permissions/: default.toml
tauri-plugin-filepicker/permissions/autogenerated/: reference.md
tauri-plugin-filepicker/permissions/autogenerated/commands/: get_file_picker.toml
tauri-plugin-filepicker/permissions/schemas/: schema.json
tauri-plugin-filepicker/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
(+33 files in other folders)
