[package]
name = "lab_tasks"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
serde_json = "1.0.137"
serde = "1.0.217"
rusqlite = { version = "0.33.0", features = ["bundled"] }
libsqlite3-sys = { version = "0.31.0", features = ["bundled"] }
chrono = "0.4.39"
lab_tasks_types = { path = "../lab_tasks_types" }
